objects/OPP_SellingCenter__c.object
<CustomObject>
    <description>September Release - To help Salespersons when they need assistance from another BU or country, by displaying the appropriate point of contact.</description>
    <fields>
        <fullName>Business__c</fullName>
        <description>September Release - To determine the Business of  a selling center</description>
        <label>Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BD</fullName>
                    <color>#F3D904</color>
                    <label>BD</label>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                    <color>#A53711</color>
                    <label>EN</label>
                </value>
                <value>
                    <fullName>GW</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                    <color>#78C953</color>
                    <label>ID</label>
                </value>
                <value>
                    <fullName>IT</fullName>
                    <color>#E27001</color>
                    <label>IT</label>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>PR</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                    <color>#33FFFA</color>
                    <label>PS</label>
                </value>
                <value>
                    <fullName>SO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>September Release  - To populate related Country.</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Selling Centers</relationshipLabel>
        <relationshipName>SellingCenters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>September Release - To store description for a selling center</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>September Release - To store Email of selling center</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <label>Selling Center</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>contains</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CH_Selling_Centers</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>Country__c</columns>
        <columns>Description__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Switzerland</value>
        </filters>
        <label>CH Selling Centers</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Selling_Center_KSA</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Saudi Arabia</value>
        </filters>
        <label>Selling Center KSA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Selling_Center_KSA1</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Turkey</value>
        </filters>
        <label>Selling Center TR</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <nameField>
        <label>Selling Center Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selling Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>